@@ -90,6 +90,9 @@ typedef struct msc_string msc_string;
 #define RESPONSE_BODY_LIMIT_ACTION_REJECT       0
 #define RESPONSE_BODY_LIMIT_ACTION_PARTIAL      1
 
+#define REQUEST_BODY_FORCEBUF_OFF               0
+#define REQUEST_BODY_FORCEBUF_ON                1
+
 #define SECACTION_TARGETS                       "REQUEST_URI"
 #define SECACTION_ARGS                          "@unconditionalMatch"
 
