@@ -117,6 +117,7 @@ struct multipart_data {
     int                      flag_unmatched_boundary;
     int                      flag_boundary_whitespace;
     int                      flag_missing_semicolon;
+    int                      flag_invalid_quoting;
 };
 
 
